@@ -22,18 +22,16 @@ import static org.mockito.Mockito.*;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.gravitee.definition.model.flow.Flow;
-import io.gravitee.repository.exceptions.TechnicalException;
 import io.gravitee.repository.management.api.OrganizationRepository;
+import io.gravitee.repository.management.model.Event;
 import io.gravitee.repository.management.model.Organization;
 import io.gravitee.repository.management.model.flow.FlowReferenceType;
+import io.gravitee.rest.api.model.EventType;
 import io.gravitee.rest.api.model.OrganizationEntity;
 import io.gravitee.rest.api.model.UpdateOrganizationEntity;
 import io.gravitee.rest.api.service.configuration.flow.FlowService;
 import io.gravitee.rest.api.service.impl.OrganizationServiceImpl;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.InjectMocks;
@@ -67,21 +65,22 @@ public class OrganizationService_CreateTest {
     private ObjectMapper mapper;
 
     @Test
-    public void shouldCreateOrganization() throws TechnicalException {
+    public void shouldCreateOrganization() throws Exception {
         when(mockOrganizationRepository.findById(any())).thenReturn(Optional.empty());
 
         UpdateOrganizationEntity org1 = new UpdateOrganizationEntity();
-        org1.setHrids(Arrays.asList("orgid"));
+        org1.setHrids(List.of("orgid"));
         org1.setName("org_name");
         org1.setDescription("org_desc");
         List<String> domainRestrictions = Arrays.asList("domain", "restriction");
         org1.setDomainRestrictions(domainRestrictions);
-        org1.setFlows(Arrays.asList());
+        org1.setFlows(List.of());
 
         Organization createdOrganization = new Organization();
         createdOrganization.setId("org_id");
         when(mockOrganizationRepository.create(any())).thenReturn(createdOrganization);
         when(mockFlowService.findByReference(FlowReferenceType.ORGANIZATION, "org_id")).thenReturn(new ArrayList<>());
+        when(mapper.writeValueAsString(any())).thenReturn("{}");
 
         OrganizationEntity organization = organizationService.createOrUpdate("org_id", org1);
 
@@ -99,25 +98,33 @@ public class OrganizationService_CreateTest {
         verify(mockOrganizationRepository, never()).update(any());
         verify(mockRoleService, times(1)).initialize("org_id");
         verify(mockRoleService, times(1)).createOrUpdateSystemRoles("org_id");
-        verify(mockFlowService, times(1)).save(FlowReferenceType.ORGANIZATION, "org_id", Arrays.asList());
+        verify(mockFlowService, times(1)).save(FlowReferenceType.ORGANIZATION, "org_id", List.of());
+        verify(eventService, times(1))
+            .create(
+                eq(Set.of()),
+                eq(EventType.PUBLISH_ORGANIZATION),
+                eq("{}"),
+                eq(Map.of(Event.EventProperties.ORGANIZATION_ID.getValue(), "org_id"))
+            );
     }
 
     @Test
-    public void shouldUpdateOrganization() throws TechnicalException {
+    public void shouldUpdateOrganization() throws Exception {
         when(mockOrganizationRepository.findById(any())).thenReturn(Optional.of(new Organization()));
 
         UpdateOrganizationEntity org1 = new UpdateOrganizationEntity();
-        org1.setHrids(Arrays.asList("orgid"));
+        org1.setHrids(List.of("orgid"));
         org1.setName("org_name");
         org1.setDescription("org_desc");
         List<String> domainRestrictions = Arrays.asList("domain", "restriction");
         org1.setDomainRestrictions(domainRestrictions);
-        org1.setFlows(Arrays.asList(mock(Flow.class)));
+        org1.setFlows(List.of(mock(Flow.class)));
 
         Organization createdOrganization = new Organization();
         createdOrganization.setId("org_id");
         when(mockOrganizationRepository.update(any())).thenReturn(createdOrganization);
         when(mockFlowService.findByReference(FlowReferenceType.ORGANIZATION, "org_id")).thenReturn(org1.getFlows());
+        when(mapper.writeValueAsString(any())).thenReturn("{}");
 
         OrganizationEntity organization = organizationService.createOrUpdate("org_id", org1);
 
@@ -136,5 +143,12 @@ public class OrganizationService_CreateTest {
         verify(mockRoleService, never()).initialize("org_id");
         verify(mockRoleService, never()).createOrUpdateSystemRoles("org_id");
         verify(mockFlowService, times(1)).save(FlowReferenceType.ORGANIZATION, "org_id", org1.getFlows());
+        verify(eventService, times(1))
+            .create(
+                eq(Set.of()),
+                eq(EventType.PUBLISH_ORGANIZATION),
+                eq("{}"),
+                eq(Map.of(Event.EventProperties.ORGANIZATION_ID.getValue(), "org_id"))
+            );
     }
 }
